# OpenCv-Interactive-Apps-And-Examples

./: CMakeLists.txt  Readme.txt
AssignPixel/: .directory  CMakeLists.txt  assign_pixel-color1.cpp  assign_pixel-color2.cpp  assign_pixel-color3.cpp  assign_pixel-gray.cpp
InteractiveAppTutorial/: .directory
InteractiveAppTutorial/InteractiveAppTutorial_1/: CMakeLists.txt  interactive_app_tutorial_1.cpp
InteractiveAppTutorial/InteractiveAppTutorial_2/: CMakeLists.txt  interactive_app_tutorial-Ball.cpp  interactive_app_tutorial-MainApp.cpp  interactive_app_tutorial-MainApp.h  interactive_app_tutorial-util.h
InteractiveAppTutorial/InteractiveAppTutorial_3/: CMakeLists.txt  interactive_app_tutorial-Ball.h  interactive_app_tutorial-MainApp.cpp  interactive_app_tutorial-MainApp.h
InteractiveAppTutorial/InteractiveAppTutorial_4/: CMakeLists.txt  interactive_app_tutorial-Ball.cpp  interactive_app_tutorial-Ball.h  interactive_app_tutorial-MainApp.cpp  interactive_app_tutorial-MainApp.h  interactive_app_tutorial-util.h
InteractiveAppTutorial/InteractiveAppTutorial_5/: .directory  CMakeLists.txt  interactive_app_tutorial-Ball.cpp  interactive_app_tutorial-MainApp.cpp  interactive_app_tutorial-MainApp.h  interactive_app_tutorial-main.cpp
InteractiveAppTutorial/InteractiveAppTutorial_6/: .directory  CMakeLists.txt  interactive_app_tutorial-Ball.cpp  interactive_app_tutorial-Ball.h  interactive_app_tutorial-MainApp.cpp  interactive_app_tutorial-MainApp.h  interactive_app_tutorial-main.cpp  interactive_app_tutorial-util.h
MotionDetection/: CMakeLists.txt  motion_detection-diff_frames-compare.cpp  motion_detection-diff_frames.cpp
StartFromThis/: CMakeLists.txt  camera-grab_frame1.cpp  camera-grab_frame2.cpp  intro_opencv.cpp
include/: myFunction.h
